examples/test/testpolicy9361.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9361
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key20: value27
      key41: value39
      key13: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value24
      podSelector:
        matchLabels:
          key24: value25
          key32: value0
          key2: value35
